version/0.30/_sources/api/solver/_autosummary/settings/automatic.rst.txt
:orphan:

.. _automatic:

automatic
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.automatic
    :show-inheritance:

.. rubric:: Attributes

============================   ======================

Attribute                                     Summary

============================   ======================
:ref:`option <option_1>`              'option' child.

:ref:`type <type_10>`                   'type' child.

:ref:`id <id>`                            'id' child.

:ref:`normal <normal_2>`              'normal' child.

:ref:`partition <partition>`       'partition' child.

============================   ======================

.. rubric:: Included in:

==========================   ================================

Parent                                                Summary

==========================   ================================
:ref:`coloring <coloring>`       The coloring options object.

==========================   ================================

