version/0.33/_sources/api/solver/_autosummary/settings/automatic.rst.txt
:orphan:

.. _automatic:

automatic
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.automatic
    :show-inheritance:

.. rubric:: Attributes

================================================   ================================

Attribute                                                                   Summary

================================================   ================================
:ref:`option <option_2>`                                            'option' child.

:ref:`type <type_16>`                                                 'type' child.

:ref:`id <id>`                                                          'id' child.

:ref:`normal <normal_4>`                                            'normal' child.

:ref:`partition <partition>`                                     'partition' child.

:ref:`by_topological_body <by_topological_body>`       'by_topological_body' child.

:ref:`by_topological_face <by_topological_face>`       'by_topological_face' child.

:ref:`by_physics_volume <by_physics_volume>`             'by_physics_volume' child.

:ref:`by_physics_boundary <by_physics_boundary>`       'by_physics_boundary' child.

================================================   ================================

.. rubric:: Included in:

==========================   ================================

Parent                                                Summary

==========================   ================================
:ref:`coloring <coloring>`       The coloring options object.

==========================   ================================

